tests/typecheck/fail/collect_while_non_bool_cond.tw
_ := collect 1 { 42 }
